# delt

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  sprint_progress.html
delt/: __init__.py  main.py
scripts/: update_version.py
tests/: conftest.py  test_main.py
