[project]
name = "delt"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.3.0",
    "typer==0.13.1",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
]

[project.scripts]
delt = "delt.main:app"

[tool.ruff]
# Enable import order checking
lint.extend-ignore = []
lint.select = ["I", "F"]  # 'I' for import-related checks, 'F' for formatting-related checks
