[project]
name = "delt"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "arrow>=1.3.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "pytest>=9.0.1",
]

[project.scripts]
delt = "delt.main:app"

[tool.ruff]
# Enable import order checking
lint.extend-ignore = []
lint.select = ["I", "F"]  # 'I' for import-related checks, 'F' for formatting-related checks
